height of body fixed as on >1440px, the background in dark mode didn't fit.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,7 @@ body {
   --tw-bg-opacity: 1;
   background-color: var(--fallback-b1, oklch(var(--b1) / var(--tw-bg-opacity)));
   min-height: 100dvh;
+  height:fit-content;
 }
 
 ::-webkit-scrollbar {
